--- a/prijateli_tree/app/templates/choose_neighbors.html
+++ b/prijateli_tree/app/templates/choose_neighbors.html
@@ -2,8 +2,8 @@
 {% block title %}
   PrijateliTree - Choose Neighbors
 {% endblock title %}
-{$ block helper_script %}
-<script>
+{% block helper_script %}
+  <script>
     fetch('{{ url_for("create_session") }}', {
           method: 'POST',
           body: formData
@@ -18,7 +18,7 @@
       // Used to clear the URL of parameters after the banner alert is closed.
       window.history.replaceState(null, '', window.location.pathname);
     }
-</script>
+  </script>
 {% endblock helper_script %}
 {% block content %}
   {% if error %}
