--- a/prijateli_tree/app/static/css/custom.css
+++ b/prijateli_tree/app/static/css/custom.css
@@ -10,8 +10,7 @@ div.table-container {
     margin-top: 20px;
     max-height: 400px;
     overflow-y: auto;
-    padding-bottom: 20px;
-    padding-top: 20px;
+    padding: 20px 30px 10px 20px;
 }
 
 div.table-container a.btn {
