--- a/prijateli_tree/app/templates/admin_dashboard.html
+++ b/prijateli_tree/app/templates/admin_dashboard.html
@@ -4,12 +4,12 @@
 {% endblock title %}
 {% block helper_script %}
   <script>
-    // $(document).ready(function () {
-    //   $('#sessions').DataTable();
-    //   $('#students').DataTable();
-    //   $('#denar-transactions').DataTable();
+     $(document).ready(function () {
+      $('#sessions').DataTable();
+      $('#students').DataTable();
+      $('#session_players').DataTable();
     //   $('#game-types').DataTable();
-    // });
+     });
     function cleanParams() {
       // Used to clear the URL of parameters after the banner alert is closed.
       window.history.replaceState(null, '', window.location.pathname);
@@ -37,16 +37,20 @@
   {% endif %}
   <div class="container-fluid">
     <div class="row">
-      <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8 table-container">
-        <a class="btn btn-primary btn-sm"
+      <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8">
+        <h2>List of Sessions
+        <a class="btn btn-primary btn-lg"
            href='{{ url_for("dashboard_create_session") }}'
            role="button">New Session</a>
+        </h2> 
+
+      <div class="table-container">        
         <table id="sessions"
                class="table table-hover table-bordered caption-top text-center">
-          <caption>List of Sessions</caption>
           <thead>
             <tr>
               <th scope="col">ID</th>
+              <th scope="col">Date</th>
               <th scope="col">Number of Games</th>
               <th scope="col">Players</th>
               <th scope="col">Copy URL</th>
@@ -61,6 +65,7 @@
             {% for s in sessions|sort(attribute='-created_at') %}
               <tr>
                 <th>{{ s.id }}</th>
+                <td>{{ s.created_at.date() }}</td>
                 <td>{{ s.num_games }}</td>
                 <td>{{ s.player_string }}</td>
                 <td>
@@ -75,7 +80,42 @@
           </tbody>
         </table>
       </div>
-      <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8 table-container">
+      <br><br>
+      <h2>List of Awards</h2>
+      
+      <div class="table-container">
+        <table id="session_players"
+               class="table table-hover table-bordered caption-top">
+          <thead>
+            <tr>
+              <th scope="col">Date</th>
+              <th scope="col">Student</th>
+              <th scope="col">Correct Answers</th>
+              <th scope="col">Total Points</th>
+              <th scope="col">Award Amount</th>
+            </tr>
+          </thead>
+          <tbody class="table-group-divider">
+            {% if session_players|length == 0 %}
+              <tr class="empty-table">
+                <td colspan="5">There are no session players currently in the system.</td>
+              </tr>
+            {% endif %}
+            {% for sp in session_players %}
+              <tr>
+                <td>{{ sp.created_at.date()}}</td>
+                <td>{{ sp.user.first_name + ' ' + sp.user.last_name }}</td>
+                <td>{{ sp.correct_answers}}</td>
+                <td>{{ sp.points}}</td>
+                <td>{{ sp.points *  DENAR_FACTOR }}</td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+      <br><br>
+      <h2>List of Students</h2>
+      <div class="table-container">
         <table id="students"
                class="table table-hover table-bordered caption-top text-center">
           <caption>List of Students</caption>
@@ -110,35 +150,7 @@
           </tbody>
         </table>
       </div>
-      <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8 table-container text-center">
-        <table id="denar-transactions"
-               class="table table-hover table-bordered caption-top">
-          <caption>List of Denar Transactions</caption>
-          <thead>
-            <tr>
-              <th scope="col">ID</th>
-              <th scope="col">User</th>
-              <th scope="col">Amount</th>
-              <th scope="col">Game ID</th>
-            </tr>
-          </thead>
-          <tbody class="table-group-divider">
-            {% if transactions|length == 0 %}
-              <tr class="empty-table">
-                <td colspan="5">There are no denar transactions currently in the system.</td>
-              </tr>
-            {% endif %}
-            {% for t in transactions %}
-              <tr>
-                <th>{{ t.id }}</th>
-                <td>{{ t.user.first_name + ' ' + t.user.last_name }}</td>
-                <td>{{ t.amount }}</td>
-                <td>{{ t.created_by_game_id }}</td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
+<!--
       <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8 table-container">
         <table id="game-types"
                class="table table-hover table-bordered caption-top text-center">
@@ -170,6 +182,8 @@
           </tbody>
         </table>
       </div>
+    -->  
     </div>
   </div>
+</div>
 {% endblock content %}
