--- a/prijateli_tree/app/templates/admin_dashboard.html
+++ b/prijateli_tree/app/templates/admin_dashboard.html
@@ -37,7 +37,8 @@
   {% endif %}
   <div class="container-fluid">
     <div class="row">
-      <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8" style="position: relative;">
+      <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8"
+           style="position: relative">
         <h2>
           List of Sessions
           <a class="btn btn-primary btn-lg"
